--- a/flex.html
+++ b/flex.html
@@ -6,14 +6,15 @@
     <title>flexbox</title>
   </head>
   <body>
-    <div class="flex">
-      <div class="container1">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+    <header>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </header>
 
+    <main>
+      <div class="container1"></div>
       <div class="container2">
         <div></div>
         <div></div>
@@ -25,12 +26,13 @@
         <div></div>
         <div></div>
       </div>
+    </main>
       
-      <div class="container3">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-    </div>
+    <footer>
+      <div></div>
+      <div></div>
+      <div></div>
+    </footer>
+
   </body>
 </html>
